--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <img id="logo" src="logo.png" alt="A logo of git"/>
     <h1>Git & GitHub Crash Course</h1>
     <p>Because the basics are important!</p>
+    <p>Adding a new feature in the feature branch</p>
   </body>
 </html>
